Fixed nav and added left icons, adjusted spacing of hero

--- a/src/App.css
+++ b/src/App.css
@@ -167,16 +167,16 @@ img {
 }
 
 .button {
-  max-width: 150px;
+  max-width: 160px;
   background-color: var(--navy);
-  padding: 0.6rem 1rem;
+  padding: 0.6rem 1.2rem;
   border: 1px solid var(--green);
   border-radius: 40px;
   color: var(--green);
   text-align: center;
   cursor: pointer;
   text-decoration: none;
-  font-size: 0.75rem;
+  font-size: 0.8rem;
   letter-spacing: 0.2rem;
 }
 
@@ -202,7 +202,8 @@ code {
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 4.5rem;
+  font-weight: 600;
 }
 
 h2 {
