--- a/src/Components/Hero/index.css
+++ b/src/Components/Hero/index.css
@@ -1,6 +1,9 @@
 .hero {
   display: flex;
+  justify-content: center;
+  height: 90vh;
   margin: var(--margin-standard);
+  margin-left: 2rem;
 }
 
 .hero__wrap {
@@ -11,6 +14,7 @@
 
 .hero__wrap__intro {
   color: var(--green);
+  font-size: 1.1rem;
 }
 
 .hero__wrap__name {
@@ -23,19 +27,19 @@
 }
 
 .hero__wrap__about {
-  margin-top: 0.5rem;
-  max-width: 500px;
+  margin-top: 0.9rem;
+  max-width: 700px;
   font-size: 1.3rem;
   color: var(--white);
 }
 
 .hero__wrap__button {
-  margin-top: 2rem;
+  margin-top: 3rem;
 }
 
 @media only screen and (min-width: 1500px) {
   .hero {
     margin-top: 5rem;
-    margin-left: 13rem;
+    margin-left: -5rem;
   }
 }
